--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205604.md#1" title="【一线采访】大陆培训机构倒闭 家长维权难""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-107502021-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206196.md#1" title="加拿大2021年大选 自由党出台竞选纲领""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206328-CP131485571-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://zeqdou3554.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208358.md#1">空气炸锅做的这些蔬菜 好吃得停不下来</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208631.md#1">西安地铁保安拖拽女子事件新进展 再引爆舆论</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208140.md#1">不能粉刷公寓？试试替代油漆的五种方法</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205815.md#1">江西女麻醉师张松遭警察绑架 下落不明</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208358.md#1">空气炸锅做的这些蔬菜 好吃得停不下来</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208631.md#1">西安地铁保安拖拽女子事件新进展 再引爆舆论</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208140.md#1">不能粉刷公寓？试试替代油漆的五种方法</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208492.md#1">恒大集团被至少两家信托公司讨债 股债双跌</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208571.md#1">拒中企介入 美资助太平洋海底光缆建设</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207831.md#1">组图：加州居民哀悼阿富汗阵亡美军</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13203664.md#1">黑龙江高校6名学生干部查寝耍官威 引热议</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206095.md#1">驳“深刻变革正进行” 胡锡进和官媒唱反调</a><br>
@@ -27,7 +27,6 @@
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13204286.md#1">浙江杭州副市长王宏被免职</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13204307.md#1">湖南养老机构爆雷 近二千老人痛失近亿养老钱</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206220.md#1">中共频举“杀猪刀” 阿里巴巴捐献1000亿</a><br>
-<a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13204852.md#1">习称风险挑战多 学者：再喊斗争显示形势严峻</a><br>
 <br><p align="center"><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207465.md#1">王赫：韩国研发战术核武器级导弹 暗敲中共</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206392.md#1">【秦鹏直播】马云花钱买平安 胡锡进怒怼党媒？</a><br>
@@ -105,7 +104,7 @@
 
 !共 382,987,453 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208631.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13208843-d31d340d7335b74cecf4a1b3a9d68bd1-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208631.md#1">西安地铁保安拖拽女子事件新进展 再引爆舆论</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208092.md#1">新浪微博处置52个账号 网民批：文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1">不当中共殉葬品 广东男子退出共青团</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202734.md#1">维稳还是整人？北京访民冯丽志被丢到青海</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199374.md#1">【独家】面对法轮功 610主任自曝信心不足</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200763.md#1">监狱强迫法轮功学员张继红截肢 其妻拒绝</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208492.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205700-d8fbf5c8edc44051976d00d8c15bde56-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208492.md#1">恒大集团被至少两家信托公司讨债 股债双跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208618.md#1">传北京政府提议国企入股滴滴 控制用户数据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207893.md#1">谢金河警告：投资中国 小心中共未来政策走向</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208288.md#1">习“共同富裕”政策 许胜雄：经济控制渐强</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207731.md#1">A股震荡收跌 沪深两市成交破1.5万亿元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207065.md#1">穆迪将中国房地产行业展望下调为负面</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208571.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13208622-GettyImages-1159739946-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208571.md#1">拒中企介入 美资助太平洋海底光缆建设</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208683.md#1">菅义伟将辞职 候选人之一强调加强日台关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208170.md#1">和北京关系持续恶化 立陶宛召回驻华大使</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207643.md#1">自由多元远胜孔子学院 台湾华语中心在美揭幕</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206611.md#1">何良懋：中共籍整顿影视界 隔绝西方影响</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207190.md#1">日本宣布赠台第四批AZ疫苗 台湾：诚挚感谢</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207779.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13208083-1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207779.md#1">中共强迫打新冠疫苗 民众激烈反弹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1">太原江阳化工厂发生爆炸 附近房屋玻璃震碎</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202532.md#1">湖北黄石面包车撞上重型货车 致4死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202378.md#1">湖南市民拒绝打疫苗 被警方强押到医院接种</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201698.md#1">云南一辆轿车突然起火 两幼儿不幸遇难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201544.md#1">山东滨州发生两宗炭疽病例 14岁学生染疫亡</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1">高晓松脱口秀被下架 又一阿里系名人陷麻烦</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207013.md#1">【前线采访】大陆网红李子柒火红后 衍生的利益</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204656.md#1">大陆开学日 网民调侃：学校围墙“长满家长”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202865.md#1">组图：上海出现病例 居民排队接受病毒检测</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202315.md#1">中共官方刊登五千字长文批郎平 引发争议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201414.md#1">三退声明精选（2021/08/31）</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13180002-GettyImages-1234304748@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198040.md#1">习近平要求防范民族风险 分析：中共要控制所有人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194436.md#1">【财商天下】英语下架 文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194291.md#1">中共禁民办学校 学者：控制思想 掠夺财富</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/24/n13185119.md#1">约翰霍普金斯大学修改规定 不认可中国疫苗</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/20/n13177079.md#1">拍《尚气》与梁朝伟合作 刘思慕直呼美梦成真</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205815.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205815.md#1">江西女麻醉师张松遭警察绑架 下落不明</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208631.md#1">西安地铁保安拖拽女子事件新进展 再引爆舆论</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208092.md#1">新浪微博处置52个账号 网民批：文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1">不当中共殉葬品 广东男子退出共青团</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202734.md#1">维稳还是整人？北京访民冯丽志被丢到青海</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199374.md#1">【独家】面对法轮功 610主任自曝信心不足</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208492.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205700-d8fbf5c8edc44051976d00d8c15bde56-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208492.md#1">恒大集团被至少两家信托公司讨债 股债双跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208618.md#1">传北京政府提议国企入股滴滴 控制用户数据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207893.md#1">谢金河警告：投资中国 小心中共未来政策走向</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208288.md#1">习“共同富裕”政策 许胜雄：经济控制渐强</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207731.md#1">A股震荡收跌 沪深两市成交破1.5万亿元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207065.md#1">穆迪将中国房地产行业展望下调为负面</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208571.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13208622-GettyImages-1159739946-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208571.md#1">拒中企介入 美资助太平洋海底光缆建设</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208683.md#1">菅义伟将辞职 候选人之一强调加强日台关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208170.md#1">和北京关系持续恶化 立陶宛召回驻华大使</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207643.md#1">自由多元远胜孔子学院 台湾华语中心在美揭幕</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206611.md#1">何良懋：中共籍整顿影视界 隔绝西方影响</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207190.md#1">日本宣布赠台第四批AZ疫苗 台湾：诚挚感谢</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207779.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13208083-1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207779.md#1">中共强迫打新冠疫苗 民众激烈反弹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1">太原江阳化工厂发生爆炸 附近房屋玻璃震碎</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202532.md#1">湖北黄石面包车撞上重型货车 致4死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202378.md#1">湖南市民拒绝打疫苗 被警方强押到医院接种</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201698.md#1">云南一辆轿车突然起火 两幼儿不幸遇难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201544.md#1">山东滨州发生两宗炭疽病例 14岁学生染疫亡</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1">高晓松脱口秀被下架 又一阿里系名人陷麻烦</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207013.md#1">【前线采访】大陆网红李子柒火红后 衍生的利益</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204852.md#1">习称风险挑战多 学者：再喊斗争显示形势严峻</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204656.md#1">大陆开学日 网民调侃：学校围墙“长满家长”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202865.md#1">组图：上海出现病例 居民排队接受病毒检测</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202315.md#1">中共官方刊登五千字长文批郎平 引发争议</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13180002-GettyImages-1234304748@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198040.md#1">习近平要求防范民族风险 分析：中共要控制所有人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194436.md#1">【财商天下】英语下架 文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194291.md#1">中共禁民办学校 学者：控制思想 掠夺财富</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/24/n13185119.md#1">约翰霍普金斯大学修改规定 不认可中国疫苗</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/20/n13177079.md#1">拍《尚气》与梁朝伟合作 刘思慕直呼美梦成真</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/26/n13188642.md#1">【独家】辽宁文件泄中共在网络领域抹黑西方</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/24/n13183636.md#1">【独家】文件泄辽宁收集在华韩国人活动轨迹</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/20/n13174730.md#1">【独家】中共建“规章制度”迫害法轮功</a><br>
