--- a/gb/nf5773_2.md
+++ b/gb/nf5773_2.md
@@ -13,7 +13,7 @@
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/29/n13124905.md#1" target="_blank">新疆女“老虎”任华受审 被控受贿四千多万</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/29/n13124905.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13124999-99946804858984b86ab6cab375593b75-150x120.jpg" align ="left"></a>新疆自治区前政府副主席任华受贿案日前开庭，检方指控任华受贿金额超过四千万元人民币。据报，任华与三名落马的新疆“大老虎”曾共事多年。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月29日 11:35 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/22/n13107649.md#1" target="_blank">中共官媒痛批吴亦凡 警方通报后狗血剧反转</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/22/n13107649.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13107669-GettyImages-632143180-150x120.jpg" align ="left"></a>中国流量明星吴亦凡被曝诱骗年轻女孩，引发舆论关注。随着中共官媒口诛笔伐，官方机构发红头文件封杀，吴亦凡迅速被推上风口浪尖。当北京警方发布调查通报后，剧情又迅速逆转。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月23日 12:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/20/n13102817.md#1" target="_blank">吴亦凡陷桃色风波 中共官媒集体讨伐引猜测</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/20/n13102817.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13102868-GettyImages-632143200-150x120.jpg" align ="left"></a>中国流量明星吴亦凡陷入桃色新闻，被曝诱骗年轻女性，引发舆论关注。随着中共官媒口诛笔伐，官方机构发红头文件封杀，吴亦凡迅速被推上风口浪尖。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月21日 9:04 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/20/n13101261.md#1" target="_blank">北京前副检察长被判11年 曾被国际组织追查</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/20/n13101261.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/48d3bc948b4acdcaed34b61fd464eccd-150x120.jpg" align ="left"></a>7月20日，中共北京市检察院前党组成员、副检察长焦慧强被判刑11年。其被指受贿“数额特别巨大”。此外，焦慧强曾因迫害法轮功被海外“追查迫害法轮功国际组织”（下称追查国际）列入追查名单。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月20日 3:27 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/20/n13175359.md#1" target="_blank">山西晋城监狱一级高级警长田文彪被调查</a><br></h3>8月19日，中共山西省晋城监狱一级高级警长田文彪涉嫌“严重违纪违法”，目前正接受调查。田文彪曾任山西省多间监狱的监狱长，曾参与迫害法轮功。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月20日 2:23 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/20/n13174936.md#1" target="_blank">杭州市前政法委书记马晓晖落马 曾迫害法轮功</a><br></h3>8月19日，中共浙江省人大常委会机关党组副书记马晓晖涉嫌“严重违纪违法”被调查。官方通报称其“主动投案”。马晓晖曾任杭州市政法委书记，曾参与迫害法轮功。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月20日 11:39 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/18/n13169889.md#1" target="_blank">怀疑妻子外遇 贵州一员工杀死党组书记</a><br></h3>中共贵州丹寨县教育和科技局前党组书记罗某被该局员工陈某杀害一事，近日才被曝光。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月19日 2:25 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/17/n13168961.md#1" target="_blank">重庆高院执行局长张晓川被查 曾迫害法轮功</a><br></h3>8月17日，重庆市高级法院执行局局长张晓川被当局审查。张晓川因积极追随中共参与迫害法轮功学员，被海外国际组织追查，他领导的单位曾被中共当局评为与法轮功“斗争”的“先进集体”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月18日 2:52 AM							</td></tr>
