--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -16,16 +16,15 @@
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/15/n13091712.md#1" target="_blank">脂肪肝2年消失 一类药草茶增免疫、抗发炎</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/15/n13091712.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13091789-tea_1871514067-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/10/n13080633.md#1" target="_blank">养好胃口才能抗癌！营养师：癌症饮食3大要诀</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/7/10/n13080633.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13087148-cancer-food-fight_1502043044-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
-<h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/19/n13173890.md#1" target="_blank">糙米、胚芽米、发芽米哪种好？这样吃最养生</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/23/n13182284.md#1" target="_blank">处暑是养肺滋阴好时机 多吃天然润燥食物</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/27/n13192360.md#1" target="_blank">这些“豆”很多人搞混  2招区分、吃对才养生</a><br></h3>
-<h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/29/n13195077.md#1" target="_blank">居家清洁破功？ 5大打扫盲点莫轻忽</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13196530.md#1" target="_blank">喝水太少竟可能心肌梗塞？4种水好喝又排毒</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13196778.md#1" target="_blank">痛风年轻化有一大原因 中医推荐快速缓解食物</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13197965.md#1" target="_blank">肌肉少易得糖尿病！医师：控血糖最有效的运动</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13199454.md#1" target="_blank">改善五十肩 2个简单动作拉开肩关节沾黏</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201822.md#1" target="_blank">远离失智、忧郁症！研究揭最佳睡眠时间</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205314.md#1" target="_blank">【重播】迄今最强变种出现？C12变种危险吗</a><br></h3>
+<h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205789.md#1" target="_blank">生活中处处藏毒素 黑豆、绿豆加1物解百毒</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208163.md#1" target="_blank">【重播】防疫榜样以色列 成疫情第一严重国家</a><br></h3>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/zeqdou3554/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
