--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -27,7 +27,7 @@
 <tr><td width="742"><h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205660.md#1" target="_blank">美最高法院裁决 拒阻止德州执行反堕胎法</a><br></h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205660.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206021-GettyImages-1336677302-150x120.jpg" align ="left"></a>美国最高法院周三（9月1日）晚间投票决定，拒绝阻止德克萨斯州最新实行的反堕胎法。该法案规定，禁止怀孕6周以上的妇女堕胎。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 1:54 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205957.md#1" target="_blank">【快讯】第九届全世界中国古典舞大赛开赛</a><br></h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205957.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206102-20210902-dance-competition-NTDTV6-150x120.jpg" align ="left"></a>高手云集，共襄盛举。2021年9月2日下午，在美国纽约州Sugar Loaf表演艺术中心，来自世界各地的中国古典舞选手开始登台献技，拉开了第九届“全世界中国古典舞大赛”的序幕。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 1:18 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13204557.md#1" target="_blank">【更新】纽约市暴雨引发洪水 至少8人死</a><br></h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13204557.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13204559-151877-150x120.jpg" align ="left"></a>四级飓风“艾达”（Ida）的残余给美东三州地区带来暴雨、强雷暴和孤立的龙卷风的可能性，给一些地区造成破坏，并导致纽约市出现了前所未有的天气紧急状态。1日晚上，气象台对纽约市区发布了暴洪紧急状态警报，晚上11点多，白思豪宣布纽约市进入紧急状态，呼吁人们尽量不要外出。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 9:08 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205087.md#1" target="_blank">【疫情9.2】Mu变种39国现踪 美国逾2千例</a><br></h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205087.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/147166-150x120.jpg" align ="left"></a>据约翰·霍普金斯大学的统计数据，截至美东夏令时周四（9月2日）清晨5:15，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过2.18亿（218,476,520）例，死亡人数超过454万（4,543,731）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 6:35 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205087.md#1" target="_blank">【疫情9.2】Mu变种39国现踪 美国逾二千例</a><br></h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205087.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/147166-150x120.jpg" align ="left"></a>据约翰·霍普金斯大学的统计数据，截至美东夏令时周四（9月2日）清晨5:15，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过2.18亿（218,476,520）例，死亡人数超过454万（4,543,731）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 6:35 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/1/n13203728.md#1" target="_blank">【一线采访】河南卫辉商户曝洪灾背后黑幕</a><br></h3><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/1/n13203728.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13203946-a0c01e2c5874a095824b7a3b87c9f8d3-150x120.jpg" align ="left"></a>河南洪灾过去月余，9月1日，河南卫辉受灾商户接受大纪元采访，曝光洪灾背后黑幕，呼吁中共当局对灾民进行赔偿。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 11:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/enszgt341/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/enszgt341/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/enszgt341/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
