--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,9 +2,9 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244844.md#1" target="_blank">【疫情9.19】纽约数千人集会抗议疫苗护照</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244844.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244955-FreedomRally-1200x900-320x200.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周日（9月19日）清晨3:21，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过2.28亿（228,212.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 7:19 PM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244806.md#1" target="_blank">“唤醒人回归神” 神韵休斯顿两场大爆满</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244806.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244958-210918192241100719-150x120.jpg" align ="left"></a>2021年9月18日下午和晚上，休斯顿沃瑟姆剧院（HOUSTON Wortham Center Brown Theater）迎来了今年在当地的首日两场演出。
 当天演出却盛况空前，两场演出皆大爆满, 晚场一票难求, 加座都供不应求。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 7:06 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank">分享中国文化 纽约新世纪中秋游园日受褒奖</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244507-image00015-150x120.jpeg" align ="left"></a>9月18日，位于纽约上州橙县鹿苑镇（the town of Deerpark，Orange County）的新世纪公司（the New Century）举办了今年的中秋游庆祝活动，受到了当地居民的热情欢迎，逾千人参加了本次游园活动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 2:56 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank">恒大受害人患病求兑付被拒 维权遭警传唤</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244490-GettyImages-1235284069-150x120.jpg" align ="left"></a>恒大集团旗下的“恒大财富”理财产品逾期未兑付，18日凌晨，恒大集团发布公告称，截至今年5月1日，有六名高管提前赎回12笔投资产品，引发不满。有受害人告诉大纪元，她罹癌开刀急需医药费，却被拒绝提前兑付，现在只能靠卡债度日。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 11:40 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244185.md#1" target="_blank">上万非法移民聚德州立交桥下 美宣布驱逐</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244185.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244197-Border-Del-Rio-bridge-IMG_1204-150x120.jpg" align ="left"></a>美国国土安全部（DHS）周六宣布，聚集在德州高速立交桥下的非法移民将被驱逐。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:05 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank">【横河观点】世界为何对中共移植黑幕沉默？</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-1-150x120.jpg" align ="left"></a>医生披露为何世界对中共强摘器官视而不见，他们相信此事但不说，医学界的共同利益捆绑不仅在疫情和活摘，强摘器官谁最先曝光的？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:02 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244178.md#1" target="_blank">美日澳印将举行四方峰会 加强芯片供应链安全</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244178.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13231394-GettyImages-1231667255-150x120.jpg" align ="left"></a>《日经新闻》周六（9月18日）报导说，他们获得的一份下周四方会谈的联合声明草案显示，美国、日本、澳大利亚、印度四国将把先进技术与人权联系在一起，反对中国（中共）利用科学和技术在世界各地维护独裁政权。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241762.md#1" target="_blank">【名家专栏】中共经济胁迫的豪赌正在失败</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241762.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13241778-Gardner_china_coercion-1200x800-150x120.jpg" align ="left"></a>北京的经济胁迫正在经历其它国家的抗拒。近来，立陶宛在北京日益加剧的威胁下拒绝屈服，而且，立陶宛国民的信念不但没有减弱，还在增强。尤其值得一提的是，这是在美国和欧盟对中国挑起的经济战缺乏对策的大环境下，立陶宛敢说不。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242771.md#1" target="_blank">【独家】文件泄河南迫害法轮功的轨迹</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242771.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13094510-9ED1714-150x120.jpg" align ="left"></a>近日，大纪元获得中共河南当局近10年来有关迫害法轮功的内部文件。文件显示，河南省商丘市从乡村（街道、社区）到学校、政府等部门全方位打压法轮功，并制定一系列措施实施迫害，非法抓捕法轮功学员。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 4:38 AM							</td></tr>
@@ -31,6 +31,6 @@
 台湾军事专家：小老弟也要闹独立?中共四面楚歌
 台湾国防安全研究院战略与资源所所长苏紫云告诉大纪元，看起来北京目前在外交战线上是陷入了困境。“因为朝鲜的目的有两个，一个是它想要走独立的外交路线，发射弹.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 12:55 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240132.md#1" target="_blank">布林肯：抗中共胁迫 美不会让澳洲孤军奋战</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240132.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13240234-000_9MY4UB-150x120.jpg" align ="left"></a>周四（9月16日），美国与澳大利亚外长、防长在华盛顿DC举行高层会谈，聚焦印太和平稳定，共同应对中共胁迫。美国国务卿布林肯表示，北京已经看到澳大利亚不会退缩，经济报复和威胁根本行不通，且美国不会让澳大利亚孤军奋战。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 10:41 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13238628.md#1" target="_blank">分析：恒大债务危机恐引发骨牌效应</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13238628.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13238659-160329090204100311-600x400-150x120.jpg" align ="left"></a>中国房地产龙头企业恒大集团债务危机恶化，破产重组的传言不断。有业内专家分析，恒大债务危机打击了整个市场对中国房地产企业的信心，有可能对中国金融行业产生多米诺骨牌效应。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 9:17 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank">【横河观点】世界为何对中共移植黑幕沉默？</a><br></h3>医生披露为何世界对中共强摘器官视而不见，他们相信此事但不说，医学界的共同利益捆绑不仅在疫情和活摘，强摘器官谁最先曝光的？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/jtmmat3416/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
