--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -4,7 +4,7 @@
 当天演出却盛况空前，两场演出皆大爆满, 晚场一票难求, 加座都供不应求。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 7:06 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241909.md#1" target="_blank">在Costco买食品 八种最实惠 五种不合算</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241909.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12983256-GettyImages-756618-150x120.jpg" align ="left"></a>美国仓储式连锁店Costco（好市多）售卖很多受欢迎的食品，吸引大量消费者。大多数消费者一般最多一周去一次Costco购物，且Costco出售的多是大包装商品，食品也不例外。从经济实惠的角度考虑，哪些食品在Costco买合算，哪些不实惠呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243925.md#1" target="_blank">核潜艇威慑力大 攻击型和弹道导弹型有何区别</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243925.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/50517609786_370824c32a_o-150x120.jpg" align ="left"></a>随着澳大利亚与美国和英国达成协议，开始一项核动力潜艇计划，核潜艇话题开始成为热点。那么核潜艇是如何运作的，两种类型的核潜艇又有何区别呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:00 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank">分享中国文化 纽约新世纪中秋游园日受褒奖</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244507-image00015-150x120.jpeg" align ="left"></a>9月18日，位于纽约上州橙县鹿苑镇（the town of Deerpark，Orange County）的新世纪公司（the New Century）举办了今年的中秋游庆祝活动，受到了当地居民的热情欢迎，逾千人参加了本次游园活动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 2:56 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank">分享中国传统文化 新世纪中秋游园日受褒奖</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244507-image00015-150x120.jpeg" align ="left"></a>9月18日，位于纽约上州橙县鹿苑镇（the town of Deerpark，Orange County）的新世纪公司（the New Century）举办了今年的中秋游庆祝活动，受到了当地居民的热情欢迎，逾千人参加了本次游园活动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 2:56 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank">恒大受害人患病求兑付被拒 维权遭警传唤</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244490-GettyImages-1235284069-150x120.jpg" align ="left"></a>恒大集团旗下的“恒大财富”理财产品逾期未兑付，18日凌晨，恒大集团发布公告称，截至今年5月1日，有六名高管提前赎回12笔投资产品，引发不满。有受害人告诉大纪元，她罹癌开刀急需医药费，却被拒绝提前兑付，现在只能靠卡债度日。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 11:40 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244185.md#1" target="_blank">上万非法移民聚德州立交桥下 美宣布驱逐</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244185.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244197-Border-Del-Rio-bridge-IMG_1204-150x120.jpg" align ="left"></a>美国国土安全部（DHS）周六宣布，聚集在德州高速立交桥下的非法移民将被驱逐。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:05 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244178.md#1" target="_blank">美日澳印将举行四方峰会 加强芯片供应链安全</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244178.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13231394-GettyImages-1231667255-150x120.jpg" align ="left"></a>《日经新闻》周六（9月18日）报导说，他们获得的一份下周四方会谈的联合声明草案显示，美国、日本、澳大利亚、印度四国将把先进技术与人权联系在一起，反对中国（中共）利用科学和技术在世界各地维护独裁政权。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:04 AM							</td></tr>
