--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -17,7 +17,7 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/13/n13229017.md#1" target="_blank">史上名人的中秋  异彩传神千载点亮中秋节</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/13/n13229017.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13231808-sea-moon-150x120.jpg" align ="left"></a>中秋节有多少民俗传说，有多少神奇事儿呢？历史上有哪些名人，他们的中秋故事在中华文化中放异彩呢？除了嫦娥，还有谁？一起来回顾，玩味中秋明月，迎接中秋节，在人生的追寻路上增添的勇气薪柴。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 9:42 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/3/n13209098.md#1" target="_blank">趣谈怀旧广式月饼掌故</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/3/n13209098.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13234417-1Z0A7764-150x120.jpg" align ="left"></a>开旧时香港的“月饼纸”（月饼价目表），包装不如当今制成小册子的月饼介绍般精美，但当中的心思不少，邀请画师手绘封面加上写字师傅题字，薄薄一张，简洁又清晰。细阅当中的粤式月饼名称，更是有味道：蛋黄火腿烧鸡月、挂炉鸭腿月、鸡油月、椰丝莲子月、银河夜月??究竟这些月饼是什么，当年一时兴起的“月饼会”又如何运作？文化研究者温佐治.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 4:59 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/14/n13233058.md#1" target="_blank">观服饰听音乐预言未来 ——传统文化趣谈</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/14/n13233058.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/08/415c0d908185fec936288d64d6c20e9e-600x400-1-150x120.jpg" align ="left"></a>翻开古代的神仙志怪小说，我们经常看到具有神通的神仙或修道人能预言未来、趋吉避凶。在《三国演义》、《史记》等正史和演义中，我们也经常看到那些专业或者业余的占卦师、相术师成功预言了许多大人物的未来。比如，在三国演义中，诸葛亮在草庐中就曾预演天下三分的局面，而《史记》中记载的女相师许负，在汉文帝的母亲没有嫁给汉高祖的时候就预.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月16日 6:25 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245354.md#1" target="_blank">诗歌：春日咏怀</a><br></h3>忧患晚来多，频梦临深壑。 危邦固不宜，形骸何所托。 寒气塞苍冥，暮穹经血月。 鬼眼处处荧，监视遍城廓。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 11:26 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13238162.md#1" target="_blank">美国男子自称遭外星人多次绑架和植入晶片</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13238162.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13238165-Fotolia_41757402_Subscription_L-150x120.jpg" align ="left"></a>美国一名男子声称，他曾被外星人绑架很多次，并在体内植入晶片，这导致他的婚姻和工作都触礁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月16日 3:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244781.md#1" target="_blank">七绝：流浪嘉陵</a><br></h3>绵绵霁色染秋黄， 流浪嘉陵是异乡。 望断鸥帆东去远， 风梳乱发快追航！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 3:51 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244003.md#1" target="_blank">诗歌：真相</a><br></h3> 人间风雨急 红魔乱世迷 真相助慧眼 洞察识天机......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 12:23 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13242017.md#1" target="_blank">诗歌：清秋</a><br></h3>清晨秋雨后， 打马入深山。 黛色浮云海， 青黄满大田。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 12:12 AM			</td></tr>
